--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,21 @@
     <string name="HospitalName">Hospital Name</string>
     <string name="TagNewLocation">Tag New Location</string>
     <string name="TypeOfService">What type of service your place have? Select one.</string>
+    <string name="service_station">SERVICE STATION</string>
+    <string name="address">Address</string>
+    <string name="dailog_address">Address</string>
+    <string name="unit_house_number">Unit/House Number.</string>
+    <string name="street_name">Street Name.</string>
+    <string name="suburb_name">Suburb Name.</string>
+    <string name="post_code">Post Code</string>
+    <string name="state">State.</string>
+    <string name="save">SAVE</string>
+    <string name="HouseErrMsg">House Number is required</string>
+    <string name="StreetErrMsg">Street Name is required</string>
+    <string name="SuburbErrMsg">Suburb Name is required</string>
+    <string name="PostcodeErrMsg">Post Code is required</string>
+    <string name="StateErrMsg">State Name is required</string>
+    <string name="Ok">OK</string>
 
 
 </resources>
