--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
 
 
     <string-array name="services">
-        <item>SERVICES</item>
+        <item>Tow vehicle</item>
         <item>Pick-up</item>
 
     </string-array>
